<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eaapps.thebesacademy.Activities.Login"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnknownId">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="25dp"
            app:srcCompat="@drawable/app_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_app"
            android:textColor="@color/colorMain"
            android:textSize="30sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="who are you?"
            android:textColor="@color/colorMain"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/containerSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:id="@+id/containerSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/iconSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/spinner"
                android:layout_alignRight="@+id/spinner"
                android:layout_centerVertical="true"
                android:layout_marginEnd="34dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/down_arrow32"
                tools:layout_editor_absoluteX="438dp"
                tools:layout_editor_absoluteY="119dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/spinnershape"
                android:gravity="center"
                android:popupBackground="@drawable/spinner_down_shape"
                android:spinnerMode="dropdown"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="45dp" />

            <ImageView
                android:id="@+id/lineSpinner"
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/iconSpinner"
                android:layout_toStartOf="@+id/iconSpinner"
                app:srcCompat="@color/colorMain"
                tools:layout_editor_absoluteX="438dp"
                tools:layout_editor_absoluteY="119dp" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/colorMain">

            <com.eaapps.thebesacademy.Utils.EATextInputEditText
                android:id="@+id/userId_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/userid"
                android:textColor="@color/colorMain" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/colorMain"
            app:passwordToggleEnabled="true">

            <com.eaapps.thebesacademy.Utils.EATextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorMain" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_btn_login"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@color/colorMain"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_no_background"
            android:text="@string/btn_sigup"
            android:textAllCaps="false"
            android:textColor="@color/colorMain"
            android:textSize="30sp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
